--- a/package.json
+++ b/package.json
@@ -15,17 +15,25 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.1",
     "@mui/lab": "^6.0.0-beta.10",
+    "@tabler/icons-react": "^3.34.0",
     "autoprefixer": "^10.4.20",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.5.6",
+    "lucide-react": "^0.525.0",
+    "motion": "^12.19.2",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-vertical-timeline-component": "^3.6.0",
-    "tailwindcss": "^3.4.12"
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^3.4.12",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/node": "^24.0.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -34,6 +42,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "typescript": "^5.8.3",
     "vite": "^5.4.1"
   }
 }
